// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Store should initialize a multiple root tree 1`] = `
[root]
  ▾ <Parent>
      <Child key="one">
      <Child key="two">
[root]
  ▾ <Parent>
      <Child key="one">
      <Child key="two">
`;

exports[`Store should initialize a simple tree 1`] = `
[root]
  ▾ <Grandparent>
    ▾ <Parent>
        <Child key="one">
        <Child key="two">
    ▾ <Parent>
        <Child key="one">
        <Child key="two">
`;
